[tool.poetry]
name = "cumplo-authenticator"
version = "0.1.0"
description = "A fast and reliable service designed for effortless authentication on Cumplo's website, enabling streamlined information requests"
authors = ["Cristobal Sfeir <cnsfeir@uc.cl>"]
readme = "README.md"
packages = [{ include = "cumplo_authenticator" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
python-dotenv = "^1.0.0"
bs4 = "^0.0.1"
functions-framework = "^3.3.0"
firebase-admin = "^6.0.1"
google-cloud-logging = "^3.5.0"
cumplo-common = "^0.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.17.5"
flake8 = "^6.1.0"
black = "^23.7.0"
mypy = "^1.4.1"
keyring = "^24.2.0"
keyrings-google-artifactregistry-auth = "^1.1.2"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
